// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly with default props 1`] = `
<div
  className="checkGroup"
  style={undefined}
>
  <div
    className="column"
  >
    <span
      className="check check"
      style={undefined}
    >
      <input
        checked={false}
        className="native"
        defaultChecked={undefined}
        disabled={false}
        id="_teatime1"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="aa"
      />
      <label
        className="control"
        htmlFor="_teatime1"
      />
      <label
        className="label"
        htmlFor="_teatime1"
      >
        AA
      </label>
    </span>
    <span
      className="check check"
      style={undefined}
    >
      <input
        checked={false}
        className="native"
        defaultChecked={undefined}
        disabled={false}
        id="_teatime2"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="bb"
      />
      <label
        className="control"
        htmlFor="_teatime2"
      />
      <label
        className="label"
        htmlFor="_teatime2"
      >
        BB
      </label>
    </span>
    <span
      className="check check"
      style={undefined}
    >
      <input
        checked={false}
        className="native"
        defaultChecked={undefined}
        disabled={false}
        id="_teatime3"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="cc"
      />
      <label
        className="control"
        htmlFor="_teatime3"
      />
      <label
        className="label"
        htmlFor="_teatime3"
      >
        CC
      </label>
    </span>
  </div>
</div>
`;

exports[`Renders correctly with defined props 1`] = `
<div
  className="checkGroup outer"
  style={undefined}
>
  <div
    className="column"
  >
    <span
      className="check check"
      style={undefined}
    >
      <input
        checked={false}
        className="native"
        defaultChecked={undefined}
        disabled={true}
        id="_teatime4"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="aa"
      />
      <label
        className="control"
        htmlFor="_teatime4"
      />
      <label
        className="label"
        htmlFor="_teatime4"
      >
        AA
      </label>
    </span>
    <span
      className="check check"
      style={undefined}
    >
      <input
        checked={true}
        className="native"
        defaultChecked={undefined}
        disabled={true}
        id="_teatime5"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="bb"
      />
      <label
        className="control"
        htmlFor="_teatime5"
      />
      <label
        className="label"
        htmlFor="_teatime5"
      >
        BB
      </label>
    </span>
  </div>
  <div
    className="column"
  >
    <span
      className="check check"
      style={undefined}
    >
      <input
        checked={true}
        className="native"
        defaultChecked={undefined}
        disabled={true}
        id="_teatime6"
        name="control"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
        value="cc"
      />
      <label
        className="control"
        htmlFor="_teatime6"
      />
      <label
        className="label"
        htmlFor="_teatime6"
      >
        CC
      </label>
    </span>
  </div>
</div>
`;
